design/v7/design-system.md
# Design System v7 — Party Cupid (Unified, Final+)

> **v6 → v7 변경** (90점 돌파 최종 수정):
> 1. A-7 카드 배지 탐색어 통일 ("선택됨" / 🆕 · 편집어는 A-9 전담)
> 2. "새로 들어옴" 기준 **마지막 방문 이후 5분 내 입장자** 명확화 + 툴팁
> 3. Save State Tokens 추가 — `local-pending` / `server-final` / `conflict-pending`
> 4. 모든 **수치는 서버 확정 기준**, pending은 별도 ⏳ 뱃지
> 5. 충돌 모달 **ESC 허용** → "제자리 유지" 처리 (접근성 탈출 경로)

## 컬러 토큰 (v3와 동일)

### Base
`--color-primary` `#FF4D6D` · `--color-primary-hover` `#E63956` · `--color-primary-soft` `#FFE3E8`
`--color-accent` `#7C3AED` · `--color-accent-soft` `#EDE4FF`
`--color-success` `#10B981` · `--color-success-soft` `#D4F7E8`
`--color-danger` `#EF4444` · `--color-danger-soft` `#FEE2E2`
`--color-warning` `#F59E0B` · `--color-warning-surface` `#FEF3C7`
`--color-bg` `#FFF7F8` · `--color-surface` `#FFFFFF`
`--color-text-primary` `#1F2937` · `--color-text-secondary` `#6B7280` · `--color-text-disabled` `#9CA3AF`
`--color-border` `#E5E7EB` · `--color-border-strong` `#D1D5DB`
`--color-overlay` `rgba(17,24,39,0.5)`

### State
`--state-disabled-bg` · `--state-focus-ring` 2px primary + 2px offset · `--state-selected-bg` primary-soft · `--state-selected-border` 2px primary · `--state-pressed-scale` 0.97

### Vote Status
`--vote-maintained` primary-soft + border 2px primary (유지 — A-9만)
`--vote-new` success-soft + border 2px success (신규 — A-9만)
`--vote-removed` warning-surface + border dashed 2px warning (해제 예정 — A-9만)
`--vote-unsaved` border-l 4px danger (저장 미완료)

### Save State Tokens (v7 신규)

| 토큰 | 시각화 | 의미 | 적용 화면 |
|------|--------|------|-----------|
| `--state-server-final` | (기본) | 서버 확정 상태 — 모든 수치에 반영 | 전체 |
| `--state-local-pending` | ⏳ 배지 + border dashed warning | 로컬 변경, 서버 저장 전 — 수치 미반영 | A-7, A-8, A-9 |
| `--state-conflict-pending` | 🔄 배지 + border 2px warning | 충돌 "제자리 유지" 선택 후 미해결 | A-9 전용 |
| `--state-save-failed` | ⚠ 배지 + border 2px danger | 재시도 3회 실패 | A-7, A-9 |

### 수치 표기 규칙 (v7 신규 — 매우 중요)

**모든 수치는 서버 확정 상태 기준**:
- 홈의 "❤ 3명 선택" → 서버에 저장된 최종 선택 수
- A-7 필터 "내 선택 3" → 서버 확정 3건
- A-9 집계 "유지 2 · 신규 1 · 해제 예정 0" → 서버 확정 상태 분해
- 남은 하트 "❤ 2/3" → 서버 확정 사용량 기준

**pending은 수치에 포함하지 않고 별도 뱃지로만 표시**:
- "⏳ 저장 중 1건 · 🔴 실패 2건" (상단 집계 배너)
- 카드별 ⏳ / 🔴 / 🔄 뱃지
- 이유: 수치가 사용자 기기 상태에 따라 다르면 공정성/투명성 훼손

## 타이포그래피
display 28/700, h1 22/700, h2 18/600, body 15/400, small 13/400, micro 11/500

## 스페이싱
4px grid · sp-1/2/3/4/5/6/8/12

---

## 컴포넌트 규격 (Unified)

### Button
default / hover / pressed / disabled / focus / loading × primary / secondary / danger
- 높이 sm 36 · md 44 (기본) · lg 52
- 터치 타겟 ≥ 44×44

### Heart Button
`unselected` · `selected` · `selected-maintained` · `selected-new` · `selected-unsaved` (저장 실패) · `disabled-out-of-vote` · `disabled-no-heart` · `loading` (saving)

시각화:
- unselected: ♡ outline
- selected: ❤ filled, primary-soft bg
- selected-maintained: ❤ + "유지" micro 배지
- selected-new: ❤ + "신규" 배지 + success-soft bg
- selected-unsaved: ❤ + ⚠ 빨간 점 + "저장 실패 · 탭 재시도"
- loading: spinner 우상단 + "저장 중..."

### Input Field
default / focus / filled / error / disabled / loading — v3와 동일

### Checkbox, Tab, Card, Countdown, Empty State, Loading Skeleton
v3 규격 그대로 유지 (변경 없음)

### Error State
네트워크 / 전송 실패 / 검증 실패 / 권한 실패 / 서버 5xx / QR 생성 실패 / 신고 제출 실패 / **하트 저장 실패** / **동시성 충돌** / **마감 직전 저장 중**

### Round Banner (v4 patch → base 통합)

`ROUND_BANNER` 컴포넌트 — 투표 단계 자동 전환:

| 상태 | 배경 | 아이콘 | 텍스트 | ARIA |
|------|------|--------|--------|------|
| `pre-vote-1` | bg | ⏳ | "곧 1차 투표 시작 · 20:30" | polite |
| `vote-1` | accent-soft | 🌸 | "1차 투표 진행 중 · 첫인상으로 선택" | polite |
| `vote-1-ending` | warning-surface | ⏰ | "1차 마감 1분 전 · 지금 선택이 최종" | **assertive** |
| `between` | bg | 💬 | "대화 시간 · 22:00에 2차 시작" | polite |
| `vote-2` | accent-soft | 💜 | "2차 투표 진행 중 · 1차 선택 유지/변경 가능" | polite |
| `vote-2-ending` | danger-soft | ⏰ | "2차 마감 1분 전 · 이번이 최종 선택" | **assertive** |
| `closed` | disabled-bg | 🔒 | "투표 종료 · 매칭 결과 확인" + [결과 보기] | assertive |

**원칙**:
- 클라이언트 타이머 기반 자동 prop 교체. 문구 수동 변경 금지.
- **중복 낭독 방지 (v6)**: 상단과 하단에 ROUND_BANNER가 동시 표시될 때는 **하단(더 긴급한 마감 임박) 1개만 aria-live 활성**, 상단은 `aria-hidden="true"` 또는 `aria-live="off"`로 설정. 한 화면에 동일 상태를 2번 낭독하지 않음.

### Heart Save State (v4 patch → base 통합)

`HEART_SAVE_STATE` 상태 머신:

```
idle → saving → saved (0.8s fade)
                   ↓
              [failure] → save-failed (사용자 재시도 대기)
                   ↓
              [conflict] → conflict (diff 표시 모달)
```

| 상태 | 시각화 | 텍스트 | 자동 동작 |
|------|--------|--------|----------|
| `idle` | 기본 | - | - |
| `saving` | 하트 + spinner | "저장 중..." | - |
| `saved` | 하트 + ✓ fade 0.8s | "저장됨" | 0.8s 후 idle로 |
| `save-failed` | 하트 + ⚠ 빨간 점 | "저장 실패" | 2→4→8s 자동 재시도 (3회) |
| `conflict` | 하트 + 🔄 주황 | "변경 감지" | **CONFLICT_DIFF_MODAL 표시** |
| `closing-saving` | 하트 + ⏳ | "마감 직전 저장 중" | - |

### Conflict Diff Modal (v5 신규 — Codex 지적 #2 해결)

동시성 충돌 시 자동 새로고침 **대신** 사용자에게 diff 제시:

```
┌──────────────────────────────┐
│  ⚠ 다른 기기에서 변경됐어요     │
│                                │
│  ━━ 내가 방금 한 변경 ━━        │
│  + ❤ 라이트 #02 (선택)          │
│                                │
│  ━━ 다른 기기에서의 변경 ━━     │
│  - ❤ 라이트 #02 (취소됨)        │
│                                │
│  어느 쪽을 유지할까요?           │
│                                │
│  [내 변경 사용]  [다른 기기 사용]│
│  [제자리 유지 (나중에 결정)]      │  ← v6: 맥락 유지
└──────────────────────────────┘
```

v6 변경: "둘 다 취소하고 목록 이동" → **"제자리 유지 (나중에 결정)"**. 현재 화면 유지, 해당 하트만 pending 상태로 표시해 사용자가 A-9에서 계속 검토 가능.

**v7 변경: ESC 허용**. `role="alertdialog"`이지만 ESC 키는 "제자리 유지"와 동일하게 처리하여 접근성 탈출 경로 보장. `aria-describedby`로 ESC 동작 명시.

스크린리더: `role="alertdialog"` + 전체 diff를 구조적으로 낭독 + "ESC 키를 누르면 제자리 유지로 처리됩니다" 안내

### 충돌 + 마감 동시 발생 우선순위 (v6 신규)

충돌 모달이 열린 상태에서 라운드 마감이 도래하는 경우:

```
T-5초: 충돌 모달 열림
T-2초: 2차 투표 마감 임박
T=0: 마감 시각
```

규칙:
1. 마감 2초 전: 모달에 **경고 배너 삽입** — "⏰ 2초 후 마감, 지금 선택하지 않으면 '제자리 유지'로 처리"
2. 마감 시각 도래: **자동으로 "제자리 유지" 선택** (서버 측 마지막 성공 상태 유지)
3. 마감 후: 모달 내용을 결과 알림으로 변경 — "마감됐어요. {실제 저장된 상태}가 최종입니다"
4. 사용자가 아무 선택 안 한 경우에도 사용자 변경은 **버리고** 서버 상태를 최종으로 인정 (충돌 없음 보장)

이유: 마감 시각 이후 서버 상태 변경 금지가 최우선. 사용자 결정은 2차적.

### Unsaved Items List (v5 신규 — Codex 지적 #6)

하트 저장 실패가 여러 건일 때 `/my-hearts` 상단에 집계 표시:

```
┌─────────────────────────────────┐
│ ⚠ 저장되지 않은 변경 3건          │
│ ──────────────────────────────  │
│ • 02 라이트 (선택 시도 · 실패)     │
│   마지막 시도 22:05:12            │
│   [다시 시도]                     │
│ • 08 오렌지빛 (취소 시도 · 실패)   │
│   [다시 시도]                     │
│ • 12 달빛 (충돌)                  │
│   [내용 확인]                     │
│                                  │
│ [모두 재시도] [모두 폐기]          │
└─────────────────────────────────┘
```

우선순위: 충돌 > 실패 > 저장 중

### Focus Management (v4 patch → base 통합, 충돌 해소)

**v4에서 발견된 Patch 5 vs 6 충돌 해결** (Codex 지적 #4):

차단 후 결과 화면 포커스 규칙 **최종 확정**:
- 진입 시 autofocus: **첫 번째 "다음으로" CTA** (`[참여자 목록으로]`)
- `[차단 해제하기]`는 화면 하단의 **secondary 액션**으로만 존재 (autofocus 아님)
- 명시 이유: 차단 직후 사용자의 주 목적은 "다른 곳으로 이동"이지 "방금 내린 결정 뒤집기"가 아님

통합 포커스 규칙:

| 상황 | 포커스 대상 | 규칙 |
|------|-----------|------|
| 바텀시트 열림 | 첫 버튼 또는 첫 필드 | focus trap + ESC 복귀 |
| 바텀시트 닫힘 | **원래 트리거 버튼** | 복귀 필수 |
| 모달 열림 | 제목 또는 첫 버튼 | focus trap |
| 탭 전환 | 결과 리스트 첫 아이템 | aria-live 알림 |
| 차단 결과 화면 | `[참여자 목록으로]` | 해제 버튼 자동 포커스 X |
| 신고 제출 성공 | 바텀시트 닫기 버튼 | - |
| 하트 토글 | **버튼 유지** (이동 X) | aria-pressed 변경 |
| 투표 단계 전환 | **현재 포커스 유지** (이동 금지) | aria-live 배너 알림만 |

### Welcome Tutorial (v5 신규 — Codex 지적 #7)

처음 입장한 참여자에게 `유지/신규/해제 예정` 개념 1회 설명:

```
┌───────────────────────┐  375×812 (A-5 온보딩 강화)
│  1/4  파티 흐름을 알려드려요 │
│                            │
│   ┌──────────────────┐   │
│   │  🌸             💜   │   │
│   │  1차          2차   │   │
│   │  첫인상      대화 후 │   │
│   └──────────────────┘   │
│                            │
│   [다음] [건너뛰기]         │
└───────────────────────┘

┌───────────────────────┐  2/4 하트 규칙
│ 마음에 드는 사람에게    │
│ ❤ 하트 3개까지 보낼 수  │
│ 있어요                  │
│ (1차·2차 각각)           │
└───────────────────────┘

┌───────────────────────┐  3/4 유지/신규/해제
│ 2차에서 1차 선택을      │
│ 바꿀 수 있어요            │
│                          │
│ ✓ 유지 · ✨ 신규          │
│ 🗑 해제 예정             │
│                          │
│ [예시 카드 3개 이미지]    │
└───────────────────────┘

┌───────────────────────┐  4/4 매칭
│ 서로 하트를 보내면       │
│ 🎉 매칭!                  │
│ 2차 마감 후 공개돼요       │
│                          │
│ [시작하기]                │
└───────────────────────┘
```

로컬 스토리지: `tutorial_seen=true` 저장, 2회부터 생략 (설정에서 재보기 가능)

### Report Follow-up Policy (v6 — UI 약속 최소화)

신고 제출 후 사용자 피드백 (UI가 절대 약속하지 않는 것 주의):

```
┌──────────────────────────────┐
│ ✓ 신고가 접수되었어요           │
│                                │
│ 주최자가 확인 후 판단해요.       │
│                                │
│ ℹ 처리 결과는 개별 안내하지     │
│   않아요                        │
│                                │
│ 이 사람을 즉시 차단하려면:       │
│ [🚫 라이트 #02 차단하기]        │
│                                │
│ [닫기]                         │
└──────────────────────────────┘
```

**v6 원칙: UI는 정책을 약속하지 않는다.**
- UI 문구: "주최자가 판단한다"까지만 — 구체 처리 옵션(숨김/강퇴) 나열 X
- UI 문구: "처리 결과는 개별 안내하지 않는다"까지만 — "3회 누적 자동 검토" 같은 운영 프로세스 약속 X
- 운영 정책(신고 누적 처리, 재발 기준, 피드백 여부)은 **주최자 전용 문서**에 별도 관리하고 참여자 UI에 노출하지 않음
- 이유: 운영 정책이 바뀌어도 UI가 거짓말이 되지 않게

---

## 접근성 인터랙션 규격 (v3와 동일, 포커스 규칙만 위 표로 통합)

### ARIA Live Region 문구
(v3와 동일)

### 카운트다운 낭독 규칙
> 10분: 1분마다 / 5~10분: 30초마다 / 1~5분: 30초마다 / 1분 미만: 10/5/3/2/1초

### Reduced Motion
모달/시트 애니메이션 50ms fade, countdown pulse 제거, skeleton 정적, toast 즉시
